Fix table row height on IE.

--- a/Time/app.less
+++ b/Time/app.less
@@ -177,6 +177,7 @@ button {
 .stars {
     >svg {
         width: 3vmin;
+        height: 3vmin;
         fill: rgba(0, 0, 0, 0.2);
     }
     
